# image_clusterer

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  start.sh
.github/workflows/: docs.yml
backend/: requirements.txt  simulate.py  simulate_remote.py
backend/app/: common.py  main.py  modal_ops.py  oracle.py  simulation.py
docs/: api.md  architecture.md  index.md  product_design.md  roadmap.md  simulation.md  usage.md
examples/: quick_demo.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.css  App.tsx  api.ts  index.css
frontend/src/components/: LogConsole.tsx  ScatterPlot.tsx  SimulationView.tsx
frontend/src/components/ui/: scroll-area.tsx
